--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.3.2",
-		"@testing-library/user-event": "^7.1.2",
-		"bootstrap": "^5.3.1",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.3",
-		"uuid": "^8.3.1"
+		"@testing-library/jest-dom": "^6.1.1",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.4.3",
+		"bootstrap": "^5.1.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-scripts": "^5.0.1",
+		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
 	},
 	"scripts": {
 		"start": "PORT=3000 react-scripts start",
